--- a/src/main/webapp/i18n/ru/global.json
+++ b/src/main/webapp/i18n/ru/global.json
@@ -3,11 +3,14 @@
     "title": "AniScan",
     "browsehappy": "Ваш браузер <strong>устарел</strong>. Пожалуйста <a href=\"http://browsehappy.com/?locale=ru\">обновите ваш браузер</a>.",
     "menu": {
+      "robots": "Роботы",
       "home": "Главная",
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
       "entities": {
         "main": "Сущности",
-        "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
+        "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)",
+        "instrument": "Instrument",
+        "robot": "Robot"
       },
       "account": {
         "main": "Профиль",
