--- a/src/main/webapp/i18n/ru/robot.json
+++ b/src/main/webapp/i18n/ru/robot.json
@@ -18,16 +18,17 @@
         "title": "Robot"
       },
       "id": "ID",
-      "type": "Type",
-      "lots": "Lots",
-      "period": "Period",
-      "operationType": "Operation Type",
-      "operationCount": "Operation Count",
-      "firstOperationDttm": "First Operation Dttm",
-      "lastOperationDttm": "Last Operation Dttm",
-      "lastPrice": "Last Price",
-      "volumeByHour": "Volume By Hour",
-      "instrument": "Instrument"
+      "type": "Тип робота",
+      "lots": "Лот",
+      "period": "Период (сек.)",
+      "operationType": "Тип операции",
+      "operationCount": "Количество",
+      "firstOperationDttm": "Время первой операции",
+      "lastOperationDttm": "Время последней операции",
+      "nextOperationDttm": "Время следующей операции",
+      "lastPrice": "Цена последней операции",
+      "volumeByHour": "Объем/час",
+      "instrument": "Инструмент"
     }
   }
 }
