add color operations type

--- a/src/main/webapp/i18n/ru/robot.json
+++ b/src/main/webapp/i18n/ru/robot.json
@@ -22,7 +22,7 @@
       "lots": "Лот",
       "period": "Период (сек.)",
       "operationType": "Тип операции",
-      "operationCount": "Количество",
+      "operationCount": "Кол-во.",
       "firstOperationDttm": "Время первой операции",
       "lastOperationDttm": "Время последней операции",
       "nextOperationDttm": "Время следующей операции",
