add instrument type and detection dttm

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -10,7 +10,8 @@
         "main": "Entities",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)",
         "instrument": "Instrument",
-        "robot": "Robot"
+        "robot": "Robot",
+        "instrumentType": "Instrument Type"
       },
       "account": {
         "main": "Account",
