--- a/src/main/webapp/i18n/en/instrument.json
+++ b/src/main/webapp/i18n/en/instrument.json
@@ -19,7 +19,8 @@
       },
       "id": "ID",
       "secCode": "Sec Code",
-      "robot": "Robot"
+      "robot": "Robot",
+      "type": "Type"
     }
   }
 }
