--- a/src/main/webapp/i18n/ru/robot.json
+++ b/src/main/webapp/i18n/ru/robot.json
@@ -26,6 +26,7 @@
       "firstOperationDttm": "Время первой операции",
       "lastOperationDttm": "Время последней операции",
       "nextOperationDttm": "Время следующей операции",
+      "detectionDttm": "Время обнаружения",
       "lastPrice": "Цена последней операции",
       "volumeByHour": "Объем/час",
       "instrument": "Инструмент"
