--- a/src/main/webapp/i18n/ru/global.json
+++ b/src/main/webapp/i18n/ru/global.json
@@ -10,7 +10,8 @@
         "main": "Сущности",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)",
         "instrument": "Instrument",
-        "robot": "Robot"
+        "robot": "Robot",
+        "instrumentType": "Instrument Type"
       },
       "account": {
         "main": "Профиль",
